--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ $(document).ready(function() {
           <path class="slide__overlay-path" d="M0,0 150,0 500,405 0,405" />
         </svg>
         <div class="slide__text">
-          <h2 class="slide__text-heading" style="font-family: 'Roboto', sans-serif;">Ashot Baghdasaryan <br> Fulstack developer</h2>
+          <h2 class="slide__text-heading" style="font-family: 'Roboto', sans-serif;">Ashot Baghdasaryan <br> Fullstack developer</h2>
         </div>
       </div>
     </div>
